Práctica 4/Practica4.output
Estado 156 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: Programa $end

    1 Programa: cabecera_programa bloque

    2 cabecera_programa: CABECERA
    3                  | error

    4 $@1: /* vacío */

    5 bloque: LLAVEIZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVEDCH

    6 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    7                   | /* vacío */

    8 Declar_subprog: Cabecera_subprog bloque

    9 Declar_de_variables_locales: INICIODCL Variables_locales FINDCL
   10                            | /* vacío */

   11 Variables_locales: Variables_locales Cuerpo_declar_variables
   12                  | Cuerpo_declar_variables

   13 $@2: /* vacío */

   14 Cuerpo_declar_variables: TIPO $@2 lista_variables PYC
   15                        | error

   16 lista_variables: lista_variables COMA identificador
   17                | identificador

   18 $@3: /* vacío */

   19 Cabecera_subprog: TIPO NOMBREVAR PARIZQ $@3 argumentos PARDCH

   20 Sentencias: Sentencias sentencia
   21           | /* vacío */

   22 sentencia: bloque
   23          | sentencia_asignacion
   24          | sentencia_si
   25          | sentencia_mientras
   26          | sentencia_hacer_hasta
   27          | sentencia_entrada
   28          | sentencia_salida
   29          | sentencia_devolver
   30          | error

   31 id: NOMBREVAR
   32   | id_array

   33 sentencia_asignacion: id ASIGN expresion PYC

   34 sentencia_si: SI PARIZQ expresion PARDCH sentencia
   35             | SI PARIZQ expresion PARDCH sentencia SINO sentencia

   36 sentencia_mientras: MIENTRAS PARIZQ expresion PARDCH sentencia

   37 sentencia_hacer_hasta: HACER sentencia HASTA PARIZQ expresion PARDCH PYC

   38 sentencia_entrada: ENTRADA lista_variables PYC

   39 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA exp_o_cadena
   40                           | exp_o_cadena

   41 exp_o_cadena: expresion
   42             | cadena

   43 cadena: CADENAASCII

   44 sentencia_salida: SALIDA lista_expresiones_o_cadena PYC

   45 sentencia_devolver: DEVOLVER expresion PYC

   46 expresion: PARIZQ expresion PARDCH
   47          | expresion ORLOGICO expresion
   48          | expresion ANDLOGICO expresion
   49          | expresion XORLOGICO expresion
   50          | expresion OPIGUALDAD expresion
   51          | expresion OPRELACION expresion
   52          | expresion OPMULTIPLICATIVOS expresion
   53          | expresion SUMRES expresion
   54          | SUMRES expresion
   55          | NEG expresion
   56          | INCREMENTO expresion
   57          | DECREMENTO expresion
   58          | id
   59          | constante_array
   60          | llamada_funcion
   61          | error

   62 $@4: /* vacío */

   63 lista_exp_vacia: $@4 lista_expresiones
   64                | /* vacío */

   65 lista_expresiones: lista_expresiones COMA expresion
   66                  | expresion

   67 $@5: /* vacío */

   68 llamada_funcion: NOMBREVAR $@5 PARIZQ lista_exp_vacia PARDCH

   69 identificador: NOMBREVAR
   70              | NOMBREVAR CORIZQ NENTERO CORDCH
   71              | NOMBREVAR CORIZQ NENTERO CORDCH CORIZQ NENTERO CORDCH

   72 id_array: NOMBREVAR CORIZQ expresion CORDCH
   73         | NOMBREVAR CORIZQ expresion CORDCH CORIZQ expresion CORDCH

   74 constante: NENTERO
   75          | NDOBLE
   76          | CARACTER
   77          | BOOL

   78 constante_array: constante
   79                | array_entero
   80                | array_real
   81                | array_bool
   82                | array_caracter

   83 array_entero: CORIZQ asignacion_array_entero CORDCH

   84 asignacion_array_entero: lista_num_entero PYC asignacion_array_entero
   85                        | lista_num_entero

   86 lista_num_entero: NENTERO COMA lista_num_entero
   87                 | NENTERO

   88 array_real: CORIZQ asignacion_array_real CORDCH

   89 asignacion_array_real: lista_num_real PYC asignacion_array_real
   90                      | lista_num_real

   91 lista_num_real: NDOBLE COMA lista_num_real
   92               | NDOBLE

   93 array_bool: CORIZQ asignacion_array_bool CORDCH

   94 asignacion_array_bool: lista_bool PYC asignacion_array_bool
   95                      | lista_bool

   96 lista_bool: BOOL COMA lista_bool
   97           | BOOL

   98 array_caracter: CORIZQ asignacion_array_caracter CORDCH

   99 asignacion_array_caracter: lista_caracter PYC asignacion_array_caracter
  100                          | lista_caracter

  101 lista_caracter: CARACTER COMA lista_caracter
  102               | CARACTER

  103 argumentos: argumentos COMA arg
  104           | arg
  105           | /* vacío */

  106 arg: TIPO identificador


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 3 15 30 61
PYC (258) 14 33 37 38 44 45 84 89 94 99
ORLOGICO (259) 47
ANDLOGICO (260) 48
XORLOGICO (261) 49
OPIGUALDAD (262) 50
OPRELACION (263) 51
OPMULTIPLICATIVOS (264) 52
NEG (265) 55
INCREMENTO (266) 56
DECREMENTO (267) 57
SUMRES (268) 53 54
PARDCH (269) 19 34 35 36 37 46 68
PARIZQ (270) 19 34 35 36 37 46 68
CORDCH (271) 70 71 72 73 83 88 93 98
CORIZQ (272) 70 71 72 73 83 88 93 98
LLAVEDCH (273) 5
LLAVEIZQ (274) 5
ASIGN (275) 33
COMA (276) 16 39 65 86 91 96 101 103
NENTERO (277) 70 71 74 86 87
NDOBLE (278) 75 91 92
BOOL (279) 77 96 97
CARACTER (280) 76 101 102
INICIODCL (281) 9
FINDCL (282) 9
CABECERA (283) 2
TIPO (284) 14 19 106
SI (285) 34 35
SINO (286) 35
MIENTRAS (287) 36
HACER (288) 37
HASTA (289) 37
DEVOLVER (290) 45
ENTRADA (291) 38
SALIDA (292) 44
NOMBREVAR (293) 19 31 68 69 70 71 72 73
CADENAASCII (294) 43


No terminales con las reglas donde aparecen

$accept (40)
    en la izquierda: 0
Programa (41)
    en la izquierda: 1, en la derecha: 0
cabecera_programa (42)
    en la izquierda: 2 3, en la derecha: 1
bloque (43)
    en la izquierda: 5, en la derecha: 1 8 22
$@1 (44)
    en la izquierda: 4, en la derecha: 5
Declar_de_subprogs (45)
    en la izquierda: 6 7, en la derecha: 5 6
Declar_subprog (46)
    en la izquierda: 8, en la derecha: 6
Declar_de_variables_locales (47)
    en la izquierda: 9 10, en la derecha: 5
Variables_locales (48)
    en la izquierda: 11 12, en la derecha: 9 11
Cuerpo_declar_variables (49)
    en la izquierda: 14 15, en la derecha: 11 12
$@2 (50)
    en la izquierda: 13, en la derecha: 14
lista_variables (51)
    en la izquierda: 16 17, en la derecha: 14 16 38
Cabecera_subprog (52)
    en la izquierda: 19, en la derecha: 8
$@3 (53)
    en la izquierda: 18, en la derecha: 19
Sentencias (54)
    en la izquierda: 20 21, en la derecha: 5 20
sentencia (55)
    en la izquierda: 22 23 24 25 26 27 28 29 30, en la derecha: 20
    34 35 36 37
id (56)
    en la izquierda: 31 32, en la derecha: 33 58
sentencia_asignacion (57)
    en la izquierda: 33, en la derecha: 23
sentencia_si (58)
    en la izquierda: 34 35, en la derecha: 24
sentencia_mientras (59)
    en la izquierda: 36, en la derecha: 25
sentencia_hacer_hasta (60)
    en la izquierda: 37, en la derecha: 26
sentencia_entrada (61)
    en la izquierda: 38, en la derecha: 27
lista_expresiones_o_cadena (62)
    en la izquierda: 39 40, en la derecha: 39 44
exp_o_cadena (63)
    en la izquierda: 41 42, en la derecha: 39 40
cadena (64)
    en la izquierda: 43, en la derecha: 42
sentencia_salida (65)
    en la izquierda: 44, en la derecha: 28
sentencia_devolver (66)
    en la izquierda: 45, en la derecha: 29
expresion (67)
    en la izquierda: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61,
    en la derecha: 33 34 35 36 37 41 45 46 47 48 49 50 51 52 53 54
    55 56 57 65 66 72 73
lista_exp_vacia (68)
    en la izquierda: 63 64, en la derecha: 68
$@4 (69)
    en la izquierda: 62, en la derecha: 63
lista_expresiones (70)
    en la izquierda: 65 66, en la derecha: 63 65
llamada_funcion (71)
    en la izquierda: 68, en la derecha: 60
$@5 (72)
    en la izquierda: 67, en la derecha: 68
identificador (73)
    en la izquierda: 69 70 71, en la derecha: 16 17 106
id_array (74)
    en la izquierda: 72 73, en la derecha: 32
constante (75)
    en la izquierda: 74 75 76 77, en la derecha: 78
constante_array (76)
    en la izquierda: 78 79 80 81 82, en la derecha: 59
array_entero (77)
    en la izquierda: 83, en la derecha: 79
asignacion_array_entero (78)
    en la izquierda: 84 85, en la derecha: 83 84
lista_num_entero (79)
    en la izquierda: 86 87, en la derecha: 84 85 86
array_real (80)
    en la izquierda: 88, en la derecha: 80
asignacion_array_real (81)
    en la izquierda: 89 90, en la derecha: 88 89
lista_num_real (82)
    en la izquierda: 91 92, en la derecha: 89 90 91
array_bool (83)
    en la izquierda: 93, en la derecha: 81
asignacion_array_bool (84)
    en la izquierda: 94 95, en la derecha: 93 94
lista_bool (85)
    en la izquierda: 96 97, en la derecha: 94 95 96
array_caracter (86)
    en la izquierda: 98, en la derecha: 82
asignacion_array_caracter (87)
    en la izquierda: 99 100, en la derecha: 98 99
lista_caracter (88)
    en la izquierda: 101 102, en la derecha: 99 100 101
argumentos (89)
    en la izquierda: 103 104 105, en la derecha: 19 103
arg (90)
    en la izquierda: 106, en la derecha: 103 104


estado 0

    0 $accept: . Programa $end

    error     desplazar e ir al estado 1
    CABECERA  desplazar e ir al estado 2

    Programa           ir al estado 3
    cabecera_programa  ir al estado 4


estado 1

    3 cabecera_programa: error .

    $default  reduce usando la regla 3 (cabecera_programa)


estado 2

    2 cabecera_programa: CABECERA .

    $default  reduce usando la regla 2 (cabecera_programa)


estado 3

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 5


estado 4

    1 Programa: cabecera_programa . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    bloque  ir al estado 7


estado 5

    0 $accept: Programa $end .

    $default  aceptar


estado 6

    5 bloque: LLAVEIZQ . $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVEDCH

    $default  reduce usando la regla 4 ($@1)

    $@1  ir al estado 8


estado 7

    1 Programa: cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


estado 8

    5 bloque: LLAVEIZQ $@1 . Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVEDCH

    INICIODCL  desplazar e ir al estado 9

    $default  reduce usando la regla 10 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 10


estado 9

    9 Declar_de_variables_locales: INICIODCL . Variables_locales FINDCL

    error  desplazar e ir al estado 11
    TIPO   desplazar e ir al estado 12

    Variables_locales        ir al estado 13
    Cuerpo_declar_variables  ir al estado 14


estado 10

    5 bloque: LLAVEIZQ $@1 Declar_de_variables_locales . Declar_de_subprogs Sentencias LLAVEDCH

    $default  reduce usando la regla 7 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 15


estado 11

   15 Cuerpo_declar_variables: error .

    $default  reduce usando la regla 15 (Cuerpo_declar_variables)


estado 12

   14 Cuerpo_declar_variables: TIPO . $@2 lista_variables PYC

    $default  reduce usando la regla 13 ($@2)

    $@2  ir al estado 16


estado 13

    9 Declar_de_variables_locales: INICIODCL Variables_locales . FINDCL
   11 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error   desplazar e ir al estado 11
    FINDCL  desplazar e ir al estado 17
    TIPO    desplazar e ir al estado 12

    Cuerpo_declar_variables  ir al estado 18


estado 14

   12 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 12 (Variables_locales)


estado 15

    5 bloque: LLAVEIZQ $@1 Declar_de_variables_locales Declar_de_subprogs . Sentencias LLAVEDCH
    6 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    TIPO  desplazar e ir al estado 19

    $default  reduce usando la regla 21 (Sentencias)

    Declar_subprog    ir al estado 20
    Cabecera_subprog  ir al estado 21
    Sentencias        ir al estado 22


estado 16

   14 Cuerpo_declar_variables: TIPO $@2 . lista_variables PYC

    NOMBREVAR  desplazar e ir al estado 23

    lista_variables  ir al estado 24
    identificador    ir al estado 25


estado 17

    9 Declar_de_variables_locales: INICIODCL Variables_locales FINDCL .

    $default  reduce usando la regla 9 (Declar_de_variables_locales)


estado 18

   11 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 11 (Variables_locales)


estado 19

   19 Cabecera_subprog: TIPO . NOMBREVAR PARIZQ $@3 argumentos PARDCH

    NOMBREVAR  desplazar e ir al estado 26


estado 20

    6 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce usando la regla 6 (Declar_de_subprogs)


estado 21

    8 Declar_subprog: Cabecera_subprog . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    bloque  ir al estado 27


estado 22

    5 bloque: LLAVEIZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias . LLAVEDCH
   20 Sentencias: Sentencias . sentencia

    error      desplazar e ir al estado 28
    LLAVEDCH   desplazar e ir al estado 29
    LLAVEIZQ   desplazar e ir al estado 6
    SI         desplazar e ir al estado 30
    MIENTRAS   desplazar e ir al estado 31
    HACER      desplazar e ir al estado 32
    DEVOLVER   desplazar e ir al estado 33
    ENTRADA    desplazar e ir al estado 34
    SALIDA     desplazar e ir al estado 35
    NOMBREVAR  desplazar e ir al estado 36

    bloque                 ir al estado 37
    sentencia              ir al estado 38
    id                     ir al estado 39
    sentencia_asignacion   ir al estado 40
    sentencia_si           ir al estado 41
    sentencia_mientras     ir al estado 42
    sentencia_hacer_hasta  ir al estado 43
    sentencia_entrada      ir al estado 44
    sentencia_salida       ir al estado 45
    sentencia_devolver     ir al estado 46
    id_array               ir al estado 47


estado 23

   69 identificador: NOMBREVAR .
   70              | NOMBREVAR . CORIZQ NENTERO CORDCH
   71              | NOMBREVAR . CORIZQ NENTERO CORDCH CORIZQ NENTERO CORDCH

    CORIZQ  desplazar e ir al estado 48

    $default  reduce usando la regla 69 (identificador)


estado 24

   14 Cuerpo_declar_variables: TIPO $@2 lista_variables . PYC
   16 lista_variables: lista_variables . COMA identificador

    PYC   desplazar e ir al estado 49
    COMA  desplazar e ir al estado 50


estado 25

   17 lista_variables: identificador .

    $default  reduce usando la regla 17 (lista_variables)


estado 26

   19 Cabecera_subprog: TIPO NOMBREVAR . PARIZQ $@3 argumentos PARDCH

    PARIZQ  desplazar e ir al estado 51


estado 27

    8 Declar_subprog: Cabecera_subprog bloque .

    $default  reduce usando la regla 8 (Declar_subprog)


estado 28

   30 sentencia: error .

    $default  reduce usando la regla 30 (sentencia)


estado 29

    5 bloque: LLAVEIZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVEDCH .

    $default  reduce usando la regla 5 (bloque)


estado 30

   34 sentencia_si: SI . PARIZQ expresion PARDCH sentencia
   35             | SI . PARIZQ expresion PARDCH sentencia SINO sentencia

    PARIZQ  desplazar e ir al estado 52


estado 31

   36 sentencia_mientras: MIENTRAS . PARIZQ expresion PARDCH sentencia

    PARIZQ  desplazar e ir al estado 53


estado 32

   37 sentencia_hacer_hasta: HACER . sentencia HASTA PARIZQ expresion PARDCH PYC

    error      desplazar e ir al estado 28
    LLAVEIZQ   desplazar e ir al estado 6
    SI         desplazar e ir al estado 30
    MIENTRAS   desplazar e ir al estado 31
    HACER      desplazar e ir al estado 32
    DEVOLVER   desplazar e ir al estado 33
    ENTRADA    desplazar e ir al estado 34
    SALIDA     desplazar e ir al estado 35
    NOMBREVAR  desplazar e ir al estado 36

    bloque                 ir al estado 37
    sentencia              ir al estado 54
    id                     ir al estado 39
    sentencia_asignacion   ir al estado 40
    sentencia_si           ir al estado 41
    sentencia_mientras     ir al estado 42
    sentencia_hacer_hasta  ir al estado 43
    sentencia_entrada      ir al estado 44
    sentencia_salida       ir al estado 45
    sentencia_devolver     ir al estado 46
    id_array               ir al estado 47


estado 33

   45 sentencia_devolver: DEVOLVER . expresion PYC

    error       desplazar e ir al estado 55
    NEG         desplazar e ir al estado 56
    INCREMENTO  desplazar e ir al estado 57
    DECREMENTO  desplazar e ir al estado 58
    SUMRES      desplazar e ir al estado 59
    PARIZQ      desplazar e ir al estado 60
    CORIZQ      desplazar e ir al estado 61
    NENTERO     desplazar e ir al estado 62
    NDOBLE      desplazar e ir al estado 63
    BOOL        desplazar e ir al estado 64
    CARACTER    desplazar e ir al estado 65
    NOMBREVAR   desplazar e ir al estado 66

    id               ir al estado 67
    expresion        ir al estado 68
    llamada_funcion  ir al estado 69
    id_array         ir al estado 47
    constante        ir al estado 70
    constante_array  ir al estado 71
    array_entero     ir al estado 72
    array_real       ir al estado 73
    array_bool       ir al estado 74
    array_caracter   ir al estado 75


estado 34

   38 sentencia_entrada: ENTRADA . lista_variables PYC

    NOMBREVAR  desplazar e ir al estado 23

    lista_variables  ir al estado 76
    identificador    ir al estado 25


estado 35

   44 sentencia_salida: SALIDA . lista_expresiones_o_cadena PYC

    error        desplazar e ir al estado 55
    NEG          desplazar e ir al estado 56
    INCREMENTO   desplazar e ir al estado 57
    DECREMENTO   desplazar e ir al estado 58
    SUMRES       desplazar e ir al estado 59
    PARIZQ       desplazar e ir al estado 60
    CORIZQ       desplazar e ir al estado 61
    NENTERO      desplazar e ir al estado 62
    NDOBLE       desplazar e ir al estado 63
    BOOL         desplazar e ir al estado 64
    CARACTER     desplazar e ir al estado 65
    NOMBREVAR    desplazar e ir al estado 66
    CADENAASCII  desplazar e ir al estado 77

    id                          ir al estado 67
    lista_expresiones_o_cadena  ir al estado 78
    exp_o_cadena                ir al estado 79
    cadena                      ir al estado 80
    expresion                   ir al estado 81
    llamada_funcion             ir al estado 69
    id_array                    ir al estado 47
    constante                   ir al estado 70
    constante_array             ir al estado 71
    array_entero                ir al estado 72
    array_real                  ir al estado 73
    array_bool                  ir al estado 74
    array_caracter              ir al estado 75


estado 36

   31 id: NOMBREVAR .
   72 id_array: NOMBREVAR . CORIZQ expresion CORDCH
   73         | NOMBREVAR . CORIZQ expresion CORDCH CORIZQ expresion CORDCH

    CORIZQ  desplazar e ir al estado 82

    $default  reduce usando la regla 31 (id)


estado 37

   22 sentencia: bloque .

    $default  reduce usando la regla 22 (sentencia)


estado 38

   20 Sentencias: Sentencias sentencia .

    $default  reduce usando la regla 20 (Sentencias)


estado 39

   33 sentencia_asignacion: id . ASIGN expresion PYC

    ASIGN  desplazar e ir al estado 83


estado 40

   23 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 23 (sentencia)


estado 41

   24 sentencia: sentencia_si .

    $default  reduce usando la regla 24 (sentencia)


estado 42

   25 sentencia: sentencia_mientras .

    $default  reduce usando la regla 25 (sentencia)


estado 43

   26 sentencia: sentencia_hacer_hasta .

    $default  reduce usando la regla 26 (sentencia)


estado 44

   27 sentencia: sentencia_entrada .

    $default  reduce usando la regla 27 (sentencia)


estado 45
